--- a/pom.xml
+++ b/pom.xml
@@ -1,8 +1,13 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<packaging>pom</packaging>
+
+	<groupId>com.alsInteligence</groupId>
+	<artifactId>sfg-pet-clinic</artifactId>
+	<version>0.0.3-SNAPSHOT</version>
+	<name>sfg-pet-clinic</name>
+	<description>SFG Pet Clinic Project</description>
 
 	<modules>
 		<module>pet-clinic-data</module>
@@ -13,23 +18,12 @@
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
 		<version>2.0.8.RELEASE</version>
-		<relativePath/> <!-- lookup parent from repository -->
+		<relativePath /> <!-- lookup parent from repository -->
 	</parent>
-	<groupId>com.alsInteligence</groupId>
-	<artifactId>sfg-pet-clinic</artifactId>
-	<version>0.0.1-SNAPSHOT</version>
-	<name>sfg-pet-clinic</name>
-	<description>SFG Pet Clinic Project</description>
 
 	<properties>
 		<java.version>1.8</java.version>
 	</properties>
-
-	<dependencies>
-
-
-
-	</dependencies>
 
 	<build>
 		<plugins>
@@ -37,7 +31,21 @@
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
 			</plugin>
+
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-release-plugin</artifactId>
+				<configuration>
+					<goals>install</goals>
+					<autoVersionSubmodules>true</autoVersionSubmodules>
+				</configuration>
+			</plugin>
+
 		</plugins>
 	</build>
 
+	<scm>
+		<developerConnection>scm:git:git@github.com:TurcoDick/sfg-pet-clinic.git</developerConnection>
+	  <tag>HEAD</tag>
+  </scm>
 </project>
