Adding vets page and controller. closes #7.

--- a/.gitignore
+++ b/.gitignore
@@ -23,3 +23,10 @@
 /nbdist/
 /.nb-gradle/
 /build/
+
+
+### Não quero quem mande essas aqui tbm ###
+pom.xml.releaseBackup
+release.properties
+pet-clinic-web/pom.xml.releaseBackup
+pet-clinic-data/pom.xml.releaseBackup
