--- a/pom.xml
+++ b/pom.xml
@@ -48,11 +48,11 @@
             <artifactId>jaxb-impl</artifactId>
             <version>${jaxb.version}</version>
         </dependency>
-        <dependency>
-            <groupId>org.hamcrest</groupId>
-            <artifactId>hamcrest-library</artifactId>
-            <version>2.1</version>
-        </dependency>
+        <!--<dependency>-->
+            <!--<groupId>org.hamcrest</groupId>-->
+            <!--<artifactId>hamcrest-library</artifactId>-->
+            <!--<version>2.1</version>-->
+        <!--</dependency>-->
     </dependencies>
 
     <build>
